<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/loading_state"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:paddingTop="10dp"
            android:scrollbars="vertical"
            android:paddingBottom="10dp"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_house"/>

</FrameLayout>