<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/state_view"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content"
        tools:showIn="@layout/activity_houses_list">

    <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/error"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_retry"
                android:textColor="#FFF"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:text="@string/retry"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>