...
                    android:id="@+id/tv_region_title"
                    android:text="@string/region"
                    tools:visibility="visible"/>

            <TextView
                    style="@style/house_details_body"
                    android:id="@+id/tv_region_content"
                    tools:visibility="visible"
                    tools:text="Berlin"/>

            <TextView
                    style="@style/house_details_head"
                    android:id="@+id/tv_coat_title"
...
